@@ -1,6 +1,15 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-08-08
+  Added the school_id and school_code to body class when viewing students.  The idea is to help CSS developers down the road.
+  
+  Cleaned up some on-screen messaging when changing terms.
+  
+  Added "spinner" property to apply draft changes button, changed description text as well.
+  
+  
+
 2021-08-06
   Added new module_enabled() function to misc, which, due to caching, will make it faster to see if a module
   is enabled or not, rather than using function_exists().  Updated various files to use this new function instead
